--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: No Space For Hate
 ###############################################
 
 navbar-links:
-  Resources: "resources"
+  Resources for Queer & Trans Folks: "resources"
 #   About Me: "aboutme"
 #   Resources:
 #     - Beautiful Jekyll: "https://beautifuljekyll.com"
