--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navbar-links:
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
 # avatar: "/assets/img/poster.jpeg"
-
+remove-ads: true
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
 
@@ -139,10 +139,10 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#FF0000"
 hover-col: "#0085A1"
-navbar-col: "#EAEAEA"
+navbar-col: "#FFFFFF"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "#EAEAEA"
+footer-col: "#FFFFFF"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
@@ -150,9 +150,9 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-#navbar-img: "/assets/img/poster.jpeg"
+#navbar-img: "/assets/img/navbar2.jpeg"
 #footer-img: "/assets/img/bgimage.png"
-#page-img: "/assets/img/poster.jpeg"
+page-img: "/assets/img/fence2.jpeg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
