--- a/_config.yml
+++ b/_config.yml
@@ -152,7 +152,7 @@ footer-hover-col: "#0085A1"
 
 #navbar-img: "/assets/img/navbar2.jpeg"
 #footer-img: "/assets/img/bgimage.png"
-page-img: "/assets/img/fence2.jpeg"
+#page-img: "/assets/img/fence2.jpeg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
